--- a/app/assets/images/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json
+++ b/app/assets/images/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json
@@ -1,6 +1,51 @@
 {
- "name": "App",
+ "name": "Melbourne Unlocked",
  "icons": [
+  {
+  "src": "apple-icon-57x57",
+  "sizes": "57x57",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-60x60",
+  "sizes": "60x60",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-72x72",
+  "sizes": "72x72",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-76x76",
+  "sizes": "76x76",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-114x114",
+  "sizes": "114x114",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-120x120",
+  "sizes": "120x120",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-144x144",
+  "sizes": "144x144",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-152x152",
+  "sizes": "152x152",
+  "type": "image\/png"
+  },
+  {
+  "src": "apple-icon-180x180",
+  "sizes": "180x180",
+  "type": "image\/png"
+  },
   {
    "src": "\/android-icon-36x36.png",
    "sizes": "36x36",
