--- a/app/assets/images/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json
+++ b/app/assets/images/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json
@@ -1,5 +1,13 @@
 {
  "name": "Melbourne Unlocked",
+ "short_name": "Melb Unlocked",
+ "theme_color": "#00A79D",
+  "background_color": "#00A79D",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "https://unlocked.melbourne/",
+  "description": "Explore Melbourne and unlock its secrets",
+  "orientation": "any",
  "icons": [
   {
   "src": "apple-icon-57x57",
@@ -47,40 +55,34 @@
   "type": "image\/png"
   },
   {
-   "src": "\/android-icon-36x36.png",
-   "sizes": "36x36",
-   "type": "image\/png",
-   "density": "0.75"
+   "src": "android-icon-36x36.png",
+   "sizes": "37x37",
+   "type": "image\/png"
   },
   {
-   "src": "\/android-icon-48x48.png",
-   "sizes": "48x48",
-   "type": "image\/png",
-   "density": "1.0"
+   "src": "android-icon-48x48.png",
+   "sizes": "49x49",
+   "type": "image\/png"
   },
   {
-   "src": "\/android-icon-72x72.png",
-   "sizes": "72x72",
-   "type": "image\/png",
-   "density": "1.5"
+   "src": "android-icon-72x72.png",
+   "sizes": "73x73",
+   "type": "image\/png"
   },
   {
-   "src": "\/android-icon-96x96.png",
-   "sizes": "96x96",
-   "type": "image\/png",
-   "density": "2.0"
+   "src": "android-icon-96x96.png",
+   "sizes": "97x97",
+   "type": "image\/png"
   },
   {
-   "src": "\/android-icon-144x144.png",
-   "sizes": "144x144",
-   "type": "image\/png",
-   "density": "3.0"
+   "src": "android-icon-144x144.png",
+   "sizes": "145x145",
+   "type": "image\/png"
   },
   {
-   "src": "\/android-icon-192x192.png",
-   "sizes": "192x192",
-   "type": "image\/png",
-   "density": "4.0"
+   "src": "android-icon-192x192.png",
+   "sizes": "193x193",
+   "type": "image\/png"
   }
  ]
 }
